devops/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-server
  labels:
    app: app-server
spec:
  selector:
    app: app-server
  ports:
  - name: ws
    port: 8080
    targetPort: 8000
  type: ClusterIP
